1-http/red/service-red.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: red
  name: red
spec:
  ports:
  - name: "80"
    port: 80
  selector:
    app: red
