1-http/red/ingress-red.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red
spec:
  rules:
  - host: red.ingress.tipjam.xyz
    http:
      paths:
      - backend:
          service:
            name: red
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - red.ingress.tipjam.xyz
    secretName: red
